<resources>
    <string name="app_name">GeoTracker</string>
    <string name="title_activity_maps">Map</string>


    <string name="network_error">Network Error</string>
    <string name="check_your_internet">Please Check Your Internet Connection</string>

    <string name="loading">Loading ...</string>
    <string name="please_wait">Please wait </string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="contact_us">Contact Us</string>


    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="about_us">Geo Tracker started its journey from 2014 and now it is one of the most popular brands as a location base service provider in Bangladesh. Clients are highly satisfied with SpyMoto for its rich features, promising services and pinpoint accuracy. \n\nSpyMoto is a service of Geon Technologies Ltd. which achieved its license of vehicle tracking system from BTRC on April 2014.\n\nYou are invited to feel the taste of  technology with SpyMoto.</string>
    <string name="select_vehicle_header">Please Select a vehicle from list</string>

    <string name="service_of">We are a service of Geon Technologies Ltd.</string>

    <string name="contact_cc">+88123456789</string>
    <string name="contact_sell">+88123456789</string>
    <string name="customer_support">123456789</string>


    <string name="select_a_vehicle">Select a Vehicle</string>

    <string name="home">Home</string>
    <string name="history">History</string>
    <string name="current_location">Location</string>
    <string name="live_tracking">Tracking</string>
    <string name="show_shistory">History</string>
    <string name="clear_map">Clear</string>
    <string name="location_demo_address">""</string>

    <string-array name="select_duration_array">
        <item>Last 1 hour</item>
        <item>Last 2 hours</item>
        <item>Last 6 hours</item>
        <item>Last 12 hours</item>
        <item>Last 24 hours</item>
        <item>Today</item>
        <item>Yesterday</item>
        <item>Custom</item>
    </string-array>


    <string-array name="place_type">
        <item>airport</item>
        <item>atm</item>
        <item>bank</item>
        <item>bus_station</item>
        <item>church</item>
        <item>doctor</item>
        <item>hospital</item>
        <item>mosque</item>
        <item>movie_theater</item>
        <item>hindu_temple</item>
        <item>restaurant</item>
        <item>home_goods_store</item>
    </string-array>

    <string-array name="place_type_name">
        <item>Airport</item>
        <item>ATM</item>
        <item>Bank</item>
        <item>Bus Station</item>
        <item>Church</item>
        <item>Doctor</item>
        <item>Hospital</item>
        <item>Mosque</item>
        <item>Movie Theater</item>
        <item>Hindu Temple</item>
        <item>Restaurant</item>
    </string-array>
</resources>
