<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.geon.lbs.ui.activity.LoginActivity"
    android:background="@drawable/sample_bg"
    android:gravity="center"
    android:orientation="vertical">
    <EditText
        android:id="@+id/user_name"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:inputType="textNoSuggestions"
        android:gravity="center"
        android:padding="5dp"
        android:textColor="@color/white"
        android:hint="@string/user_name"
        android:textSize="14sp"
        android:background="@drawable/login_et_bgnd"/>
    <EditText
        android:id="@+id/user_pass"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:padding="5dp"
        android:textColor="@color/white"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:textSize="14sp"
        android:background="@drawable/login_et_bgnd"/>
    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="15dp"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:text="@string/login"
        android:textSize="14sp"
        android:background="@drawable/login_btn_bgnd"/>
    <Button
        android:id="@+id/contact_us"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="100dp"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:text="@string/contact_us"
        android:textSize="14sp"
        android:background="@drawable/contact_us_bgnd"/>
</LinearLayout>
