<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="20"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="20"
            android:background="#000">

            <fragment xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/map"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                tools:context="com.geon.geontracker.ui.activity.MapsActivity" />
            <LinearLayout
                android:id="@+id/container_sel_veh_sel_dur"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="70dp"
                android:layout_marginEnd="10dp"
                android:orientation="horizontal"
                android:background="#fff">
                <Button
                    android:id="@+id/select_vehicle"
                    android:layout_width="35dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/ic_action_drive_eta"/>
                <LinearLayout
                    android:id="@+id/selected_vehicle_container"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="6"
                    android:background="@drawable/selected_vehicle_bg"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:visibility="visible">
                    <TextView
                        android:id="@+id/selected_vehicle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="tracking"
                        android:textSize="16dp"/>

                </LinearLayout>
                <Button
                    android:id="@+id/select_history_time"
                    android:layout_width="35dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/ic_action_access_time"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/speed_container_m"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/container_sel_veh_sel_dur"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:orientation="horizontal"
                android:gravity="start"
                android:background="@color/transparent">
                <LinearLayout
                    android:id="@+id/speed_container_c"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:background="@drawable/speed_container_0"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/vehicle_speed"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textSize="16sp"
                        android:textColor="@color/white"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textSize="10sp"
                        android:text="Km/h"
                        android:textColor="@color/white"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/duration_container"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_below="@id/container_sel_veh_sel_dur"
                android:layout_marginTop="5dp"
                android:layout_marginStart="70dp"
                android:layout_marginEnd="10dp"
                android:orientation="horizontal"
                android:background="#fff"
                android:visibility="gone">
                <TextView
                    android:id="@+id/start_time"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="5"
                    android:gravity="center"
                    android:textSize="10dp"
                    android:text="from vaoue"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="To"/>
                <TextView
                    android:id="@+id/end_time"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="5"
                    android:gravity="center"
                    android:textSize="10dp"
                    android:text="from vaoue"/>

            </LinearLayout>
        </RelativeLayout>
        <ScrollView
            android:id="@+id/nearby_location_container_lienear_l"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="8"
            android:background="#80d2ff"
            android:visibility="gone">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/address_line_one"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="asdf asfasf sfasf"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:background="#00000000"/>
                <TextView
                    android:id="@+id/address_line_two"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="asdf asfasf sfasf"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:background="#00000000"/>
                <TextView
                    android:id="@+id/address_line_three"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:background="#00000000"/>
                <TextView
                    android:id="@+id/address_line_four"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:background="#00000000"/>
                <TextView
                    android:id="@+id/address_line_five"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.2">
        <Button
            android:id="@+id/track_all_vehicle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:textAllCaps="false"
            android:text="@string/home"
            android:textColor="#0568e1"
            android:background="@drawable/button_background"
            />
        <Button
            android:id="@+id/start_tracking"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:textAllCaps="false"
            android:text="@string/live_tracking"
            android:textColor="#0568e1"
            android:background="@drawable/button_background"/>

        <Button
            android:id="@+id/show_history"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:textAllCaps="false"
            android:text="@string/history"
            android:textColor="#0568e1"
            android:background="@drawable/button_background"
            />
        <Button
            android:id="@+id/clear_map"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:textAllCaps="false"
            android:text="@string/clear_map"
            android:textColor="#0568e1"
            android:background="@drawable/button_background"/>
    </LinearLayout>
</LinearLayout>



